--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -32,10 +32,6 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-		<dependency>
 			<groupId>org.springframework.security.oauth</groupId>
 			<artifactId>spring-security-oauth2</artifactId>
 			<version>2.1.0.RELEASE</version>
@@ -46,10 +42,11 @@
 			<version>1.0.9.RELEASE</version>
 		</dependency>
 		<dependency>
-                <groupId>io.rest-assured</groupId>
-                <artifactId>rest-assured</artifactId>
-                <version>3.0.0</version>
-            </dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>3.0.0</version>
+			<scope>test</scope>
+		</dependency>
 		 <dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
